# Littlearn

./: .gitignore  esp32.ino  scratch.html
embedded/docker/: Dockerfile  README.md  enter.sh
embedded/docs/: flags.md
embedded/src/brain/: CMakeLists.txt  build_esp32.sh  build_local.sh  sdkconfig  sdkconfig.old  test.sh
embedded/src/brain/ble/: CMakeLists.txt  ble.c  ble.h
embedded/src/brain/docs/: README.md  flags.md  syntax.md
embedded/src/brain/esp-now/: esp-now.c
embedded/src/brain/esp32/: esp32.ino
embedded/src/brain/include/: ast.hpp
embedded/src/brain/interpreter/: CMakeLists.txt
embedded/src/brain/interpreter/include/: ast.hpp  error.hpp  flags.h  flags.hpp  interpreter.hpp  outputStream.hpp  radioFormatter.hpp  tokenizer.hpp
embedded/src/brain/interpreter/src/: ast.cpp  error.cpp  interpreter.cpp  outputStream.cpp  tokenizer.cpp
embedded/src/brain/local/: CMakeLists.txt  local_main.cpp  main.cpp
embedded/src/brain/main/: CMakeLists.txt  main.c  main.cpp
embedded/src/brain/radio/: CMakeLists.txt  radio.c  radio.h
embedded/src/brain/src/: ast.cpp  interpreter.cpp  main.cpp  tokenizer.cpp
embedded/src/brain/test/: CMakeLists.txt  ast_test.cpp  interpreter_test.cpp
embedded/src/brain/tools/: install_esp-ifd.sh
embedded/src/button/: CMakeLists.txt
embedded/src/button/radio/: CMakeLists.txt  radio.c
embedded/src/flags/: flags.h
embedded/src/light/: CMakeLists.txt  sdkconfig  sdkconfig.old
embedded/src/light/main/: main.c
embedded/src/radio/: README.md  idf_component.yml  radio.c  radio.h
embedded/src/tile_types/: tile_types.h
littlearn-embedded/: esp32.ino
littlearn-embedded/docker/: Dockerfile  README.md
littlearn-embedded/interpreter/: CMakeLists.txt  program_esp32.sh  syntax.md  test.sh  transfer_ide.sh
littlearn-embedded/interpreter/docs/: README.md  esp32.md  syntax.md
littlearn-embedded/interpreter/esp32/: esp32.ino
littlearn-embedded/interpreter/include/: ast.hpp  callbacks.hpp  error.hpp  interpreter.hpp  outputStream.hpp  tokenizer.hpp
littlearn-embedded/interpreter/src/: ast.cpp  error.cpp  interpreter.cpp  main.cpp  outputStream.cpp  tokenizer.cpp
littlearn-embedded/interpreter/test/: CMakeLists.txt  ast_test.cpp  interpreter_test.cpp  tokenizer_test.cpp
littlearn-web/: README.md  package-lock.json  package.json
littlearn-web/src/: App.tsx  BluetoothContext.tsx  GeneratedCodeContext.tsx  SendScript.tsx  index.css
littlearn-web/src/blockly/: toolbox.js
littlearn-web/src/blockly/blocks/: binaryOp.js  if.js  intVars.js  print.js  readport.js  text.js  vars.js  wait.js  while.js  writeport.js
littlearn-web/src/blockly/generators/: codeGen.js  javascript.js
littlearn-web/src/components/: Blockly.tsx  BluetoothConsole.tsx  BluetoothStatus.tsx  ConnectBluetooth.tsx  LeftBar.tsx  SendRawBluetooth.tsx  TextCode.tsx  UploadButton.tsx  WindowManager.tsx
littlearn-web/src/components/styles/: Blockly.css  Console.css  WindowManager.css
web/: package-lock.json  package.json
web/src/: App.tsx  BluetoothContext.tsx  SendScript.tsx  index.css
web/src/blockly/: serialization.js
web/src/blockly/blocks/: floatVars.js  sevenseg.js  wait.js
web/src/components/: BluetoothConsole.tsx  DisconnectBluetooth.tsx  LeftBar.tsx  TextCode.tsx
web/src/components/styles/: Console.css  LeftBar.css  WindowManager.css
